--- a/noticias.html
+++ b/noticias.html
@@ -2,35 +2,26 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Noticias - EasyFootball</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <title>Noticias | EasyFootball</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>⚽ EasyFootball</h1>
-    <nav>
-      <a href="index.html">Inicio</a>
-      <a href="equipos.html">Equipos</a>
-      <a href="noticias.html">Noticias</a>
-      <a href="traspasos.html">Traspasos</a>
-    </nav>
-    <button id="theme-toggle">🌙 Modo Oscuro</button>
+    <h1>📰 Noticias EasyFootball</h1>
   </header>
 
   <main>
-    <h2>📰 Noticias Generales</h2>
-    <div id="noticias-container" class="grid"></div>
+    <section>
+      <h2>⚽ Noticias Generales</h2>
+      <div id="noticias-container" class="grid"></div>
+    </section>
 
-    <h2>💸 Noticias de Traspasos</h2>
-    <div id="traspasos-container" class="grid"></div>
+    <section>
+      <h2>🔁 Noticias de Traspasos</h2>
+      <div id="traspasos-container" class="grid"></div>
+    </section>
   </main>
 
-  <footer>
-    <p>EasyFootball © 2025</p>
-  </footer>
-
-  <script src="js/main.js"></script>
   <script src="js/noticias.js"></script>
 </body>
 </html>
